SampleExample/coffee/coffee-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coffee
  namespace: deployment-coffee
spec:
  replicas: 2
  selector:
    matchLabels:
      app: coffee
  template:
    metadata:
      labels:
        app: coffee
    spec:
      containers:
      - name: coffee
        image: nginxdemos/hello:plain-text
        ports:
        - containerPort: 80
