SampleExample/coffee/cafe-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coffee-svc
  namespace: deployment-coffee
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: coffee
