SampleExample/coffee/ingress-coffee.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-ingress-coffee
  namespace: deployment-coffee
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: coffee-svc
          servicePort: 80
        path: /coffee(/|$)(.*)
